--- a/componets/index.html
+++ b/componets/index.html
@@ -6,6 +6,6 @@
     <title>VARIABLE AND CONDITION STATEMENTS.</title>
 </head>
 <body>
-    
+   <script src="datatypes.js" ></script> 
 </body>
 </html>
