--- a/Functions/Nested.html
+++ b/Functions/Nested.html
@@ -55,6 +55,24 @@ calculateTotal();
      }
      outerFunction()
 
+// clossure
+     function outer() {
+        let count = 0;
+
+        function inner() {
+          count++;
+           console.log("Count is:", count);
+    }
+
+   return inner;
+}
+
+  const counter = outer();  
+  counter(); 
+  counter(); 
+   counter(); 
+
+
     </script>
 </body>
 </html>
